// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Amharic Live Radio Page A11y I can see the skip to content link 1`] = `"ወደ ዋናው ይዘት ይለፉ"`;

exports[`AMP Amharic Live Radio Page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP Amharic Live Radio Page AMP Geo config 1`] = `
Object {
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
  },
}
`;

exports[`AMP Amharic Live Radio Page Analytics ATI 1`] = `
Object {
  "requests": Object {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=4&p=amharic.bbc_amharic_radio.liveradio.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:ares:ws_media:live:bbc_amharic_radio]&x2=[amp]&x3=[news-amharic]&x4=[am]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-live]&x8=[simorgh]&x9=[ያድምጡ+-+BBC+News+አማርኛ]&ref=\${documentReferrer}",
  },
  "transport": Object {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": Object {
    "trackPageview": Object {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Amharic Live Radio Page Analytics chartbeat 1`] = `
Object {
  "vars": Object {
    "contentType": "player-live",
    "domain": "test.bbc.co.uk",
    "sections": "Amharic, Amharic - Radio",
    "title": "ያድምጡ - BBC News አማርኛ",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Amharic Live Radio Page Analytics comscore 1`] = `
Object {
  "extraUrlParams": Object {
    "comscorekw": "amp",
  },
  "vars": Object {
    "c2": "17986528",
  },
}
`;

exports[`AMP Amharic Live Radio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/amharic"`;

exports[`AMP Amharic Live Radio Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. ቢቢሲ ከሌሎች ድረ-ገጾች ለሚመጡ መረጃዎች ሀላፊነት አይወስድም. ስለ ውጪ ሊንኮች ያለን አቀራረብ"`;

exports[`AMP Amharic Live Radio Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, አማርኛ",
  "url": "/amharic",
}
`;

exports[`AMP Amharic Live Radio Page Footer Link should match text and url 2`] = `
Object {
  "text": "ቢቢሲን ለምን ማመን እንደሚገባዎ",
  "url": "https://www.bbc.com/amharic/institutional-49283133",
}
`;

exports[`AMP Amharic Live Radio Page Footer Link should match text and url 3`] = `
Object {
  "text": "የአጠቃቀም ደንብ",
  "url": "https://www.bbc.com/usingthebbc/terms/",
}
`;

exports[`AMP Amharic Live Radio Page Footer Link should match text and url 4`] = `
Object {
  "text": "ስለ ቢቢሲ",
  "url": "https://www.bbc.com/aboutthebbc",
}
`;

exports[`AMP Amharic Live Radio Page Footer Link should match text and url 5`] = `
Object {
  "text": "የፕራይቬሲ ፖሊሲ",
  "url": "https://www.bbc.com/usingthebbc/privacy/",
}
`;

exports[`AMP Amharic Live Radio Page Footer Link should match text and url 6`] = `
Object {
  "text": "ኩኪዎች",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Amharic Live Radio Page Footer Link should match text and url 7`] = `
Object {
  "text": "ቢቢሲን ያግኙ",
  "url": "https://www.bbc.com/amharic/institutional-42228117",
}
`;

exports[`AMP Amharic Live Radio Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`AMP Amharic Live Radio Page Footer Link should match text and url 9`] = `
Object {
  "text": "ስለ ውጪ ሊንኮች ያለን አቀራረብ",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`AMP Amharic Live Radio Page Header I can see the branding 1`] = `"BBC News, አማርኛ"`;

exports[`AMP Amharic Live Radio Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "ዜና",
  "url": "/amharic",
}
`;

exports[`AMP Amharic Live Radio Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "ኢትዮጵያ",
  "url": "/amharic/topics/e986aff5-6b26-4638-b468-371d1d9617b4",
}
`;

exports[`AMP Amharic Live Radio Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "ቪዲዮ",
  "url": "/amharic/media/video",
}
`;

exports[`AMP Amharic Live Radio Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "በጣም የተወደዱ",
  "url": "/amharic/popular/read",
}
`;

exports[`AMP Amharic Live Radio Page Main heading should match text 1`] = `"ያድምጡ"`;

exports[`AMP Amharic Live Radio Page Media Player a11y assistive technology can read the media player title 1`] = `"Audio player"`;

exports[`AMP Amharic Live Radio Page Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_amharic_radio/liveradio/am/amp?morph_env=live"`;

exports[`AMP Amharic Live Radio Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/amharic/images/icons/icon-192x192.png",
}
`;

exports[`AMP Amharic Live Radio Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-72x72.png",
}
`;

exports[`AMP Amharic Live Radio Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-96x96.png",
}
`;

exports[`AMP Amharic Live Radio Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-128x128.png",
}
`;

exports[`AMP Amharic Live Radio Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-144x144.png",
}
`;

exports[`AMP Amharic Live Radio Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-152x152.png",
}
`;

exports[`AMP Amharic Live Radio Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-192x192.png",
}
`;

exports[`AMP Amharic Live Radio Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-384x384.png",
}
`;

exports[`AMP Amharic Live Radio Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-512x512.png",
}
`;

exports[`AMP Amharic Live Radio Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/amharic/images/icons/icon-512x512.png",
}
`;

exports[`AMP Amharic Live Radio Page SEO Canonical link 1`] = `"http://localhost:7080/amharic/bbc_amharic_radio/liveradio"`;

exports[`AMP Amharic Live Radio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Amharic Live Radio Page SEO FB admins 1`] = `"100004154058350"`;

exports[`AMP Amharic Live Radio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Amharic Live Radio Page SEO Heading level 1 1`] = `"ያድምጡ"`;

exports[`AMP Amharic Live Radio Page SEO Lang attribute 1`] = `"am"`;

exports[`AMP Amharic Live Radio Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "RadioChannel",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/amharic/bbc_amharic_radio/liveradio",
        "@type": "WebPage",
        "name": "ያድምጡ",
      },
      "url": "http://localhost:7080/amharic/bbc_amharic_radio/liveradio",
    },
  ],
}
`;

exports[`AMP Amharic Live Radio Page SEO OG description 1`] = `"ዝግጅቶቻችንን’"`;

exports[`AMP Amharic Live Radio Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png"`;

exports[`AMP Amharic Live Radio Page SEO OG image alt 1`] = `"BBC News አማርኛ"`;

exports[`AMP Amharic Live Radio Page SEO OG locale 1`] = `"am-ET"`;

exports[`AMP Amharic Live Radio Page SEO OG site name 1`] = `"BBC News አማርኛ"`;

exports[`AMP Amharic Live Radio Page SEO OG title 1`] = `"ያድምጡ - BBC News አማርኛ"`;

exports[`AMP Amharic Live Radio Page SEO OG type 1`] = `"website"`;

exports[`AMP Amharic Live Radio Page SEO OG url 1`] = `"http://localhost:7080/amharic/bbc_amharic_radio/liveradio"`;

exports[`AMP Amharic Live Radio Page SEO Page title 1`] = `"ያድምጡ - BBC News አማርኛ"`;

exports[`AMP Amharic Live Radio Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`AMP Amharic Live Radio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Amharic Live Radio Page SEO Twitter creator 1`] = `"@bbcnews"`;

exports[`AMP Amharic Live Radio Page SEO Twitter description 1`] = `"ዝግጅቶቻችንን’"`;

exports[`AMP Amharic Live Radio Page SEO Twitter image alt 1`] = `"BBC News አማርኛ"`;

exports[`AMP Amharic Live Radio Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/amharic.png"`;

exports[`AMP Amharic Live Radio Page SEO Twitter site 1`] = `"@bbcnews"`;

exports[`AMP Amharic Live Radio Page SEO Twitter title 1`] = `"ያድምጡ - BBC News አማርኛ"`;

exports[`AMP Amharic Live Radio Page Summary should match text 1`] = `"ዝግጅቶቻችንን’"`;
